CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.0

 Release Details:
  45:
   NetcdfDataset.setDefaultEnhanceMode(Set<Enhance> mode);
   GEMPAK bug workaround (from Don)
   Nexrad2,3 coord caching
   COARDSConvention: withdraw "SimpleUnit.isCompatible("m", unit), must have "positive" attibute
   ncstream uses URLEncode for passing UTF-8 var names.
   N3iosp.sync() checks for numrec < 0 (isStreaming)
   Fmrc: remove global atttributes taken from random prototype dataset
   fix readToByteChannel() problems
   refactor ncstream, another pass at protobuf messsages
   GempakCdm point adapter now does stationAsPoint.
   JoinArray is parameterized
   Table.extraJoins now is a list.
   Stucture.Iterator now handles general rank case. StructureDS.Itertaor is removed
   AvhrrConvention bug
   CoordinateAxis.copyNoCache() must preserve state. caused grid.NetcdfCFWriter to fail when x,y units != km.
  44:
   TDSRadarDatasetCollection improvements
   AvhrrSatellite Convention - start of Image datatype
   ArrayChar.makeString() needs to check string len
   CFpointObs: station unlimited dimension case
   Array.arrayCopy() now deals with src not in canonical order. mostly affected aggregation of datasets which
     do sectioning in memory, such as GINI.
   TDS: remote station data
   add List<Station> StationCollection.getStations(String[] names);
   CdmRemoteDatasetFactory now handles any type of cdmRemote dataset, including Grid.
  43:
   add Variable.setCachedData check for correct array type
   WRF, ADAS CoordSysBuilder makeSoilCoordintae had wrong datatype
   ToolsUI Viewer: write local file
   NetcdfFileWriteable: change att names to legal and give warning rather than exception
  42:
   Fmrc must enhance datasets when acquiring.
   Use FeatureType.ANY instead of FeatureType.NONE
   upgrade protobuf library to 2.1.0
   grib index performance enhancements
   ucar.units enhancement
   nexrad2 bug fixes