@@ -38,6 +38,8 @@ import ucar.nc2.dataset.CoordinateSystem;
 import ucar.nc2.dataset.CoordinateAxis;
 import ucar.nc2.constants.AxisType;
 import ucar.nc2.Dimension;
+import ucar.nc2.Variable;
+import ucar.ma2.DataType;
 
 /**
  * CoordinateSystem Evaluation utilities.
@@ -80,7 +82,6 @@ public class CoordSysEvaluator {
     CoordinateAxis coordAxis = findCoordByType(ds, atype);
     return coordAxis == null ? null : coordAxis.getName();
   }
-
 
   /**
    * Look for Axis by Type.
